[tool.poetry]
name = "dank-mids"
version = "4.20.169"
description = "Multicall batching middleware for asynchronous scripts using web3.py"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
homepage = "https://github.com/BobTheBuidler/dank_mids"
repository = "https://github.com/BobTheBuidler/dank_mids"
documentation = "https://BobTheBuidler.github.io/dank_mids"
license = "MIT"
readme = "README.md"
include = [
    { path = "6486cd47b6f59329387b__mypyc.cpython-39-x86_64-linux-gnu.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-39-darwin.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cp39-win_amd64.pyd", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-310-x86_64-linux-gnu.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-310-darwin.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cp310-win_amd64.pyd", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-311-x86_64-linux-gnu.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-311-darwin.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cp311-win_amd64.pyd", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-312-x86_64-linux-gnu.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cpython-312-darwin.so", format = ["sdist", "wheel"] },
    { path = "6486cd47b6f59329387b__mypyc.cp312-win_amd64.pyd", format = ["sdist", "wheel"] },
]
exclude = ["tests", "tests.*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiofiles = "*"
aiolimiter = ">=1.2,<1.3"
cchecksum = ">=0.0.3,<1"
eth-retry = ">=0.3.1,<1"
eth-typing = ">=4.2.0"
evmspec = ">=0.4.1,<1"
ez-a-sync = ">=0.28,<1"
faster-eth-abi = ">=5.2.1"
faster-eth-utils = "*"
multicall = ">=0.6.2,<1"
typed-envs = ">=0.1.3,<0.2"
web3 = ">=5.27,!=5.29.*,!=5.30.*,!=5.31.1,!=5.31.2,<8"

[tool.poetry.group.dev.dependencies]
eth-brownie = ">=1.20.3"
pytest = "*"
pytest-asyncio-cooperative = "*"
pytest-cov = "*"
pytest-sugar = "*"
types-aiofiles = "*"
# need this to resolve brownie locally, didn't before
importlib-resources = ">=6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["build/","cache/","env/","tests/"]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["return"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | cache
  | docs
  | dist
  | env
)/
'''
