[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dank-mids"
version = "4.20.208"
description = "Multicall batching middleware for asynchronous scripts using web3.py"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "BobTheBuidler", email = "bobthebuidlerdefi@gmail.com" },
]
dependencies = [
    "aiofiles",
    "aiolimiter>=1.2,<1.3",
    "cchecksum>=0.0.3,<1",
    "eth-retry>=0.3.6,<1",
    "eth-typing>=4.2.0",
    "evmspec>=0.4.6,<1",
    "ez-a-sync>=0.34.0,<0.35",
    "faster-eth-abi>=5.2.12",
    "faster-eth-utils>=5.3.11",
    "faster-hexbytes>1,<2",
    "multicall>=0.6.2,<1",
    "typed-envs==0.2.4",
    "web3>=5.27,!=5.29.*,!=5.30.*,!=5.31.1,!=5.31.2,<8",
]

[project.urls]
Homepage = "https://github.com/BobTheBuidler/dank_mids"
Repository = "https://github.com/BobTheBuidler/dank_mids"
Documentation = "https://BobTheBuidler.github.io/dank_mids"

[dependency-groups]
build = [
    "eth-retry==0.3.7",
    "eth-typing==5.2.1",
    "ez-a-sync==0.34.2",
    "faster-eth-abi==5.2.27",
    "faster-hexbytes==1.3.6",
    "mypy[mypyc]==1.20.2",
    "setuptools",
    "typed-envs==0.2.4",
    "types-requests",
]
dev = [
    "eth-brownie==1.22.0.dev4",
    "importlib-resources>=6.4.0",
    "pytest==6.2.5",
    "pytest-asyncio-cooperative==0.40.0",
    "pytest-cov==6.3.0",
    "pytest-sugar==1.1.1",
    "setuptools<81",
    "types-aiofiles==25.1.0.20251011",
]
docs = [
    { include-group = "dev" },
    "Cython<3",
    "sphinx",
    "sphinx-rtd-theme",
    "wheel",
]
mypy = [
    { include-group = "build" },
    "types-aiofiles==25.1.0.20251011",
]

[tool.uv]
required-version = ">=0.11.0"
default-groups = ["dev"]

[tool.hatch.build]
exclude = [
    "/*.pyd",
    "/*.so",
    "/build",
    "/cache",
    "/dist",
    "/docs/_build",
    "/env",
    "/tests",
    "/.github",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.tox",
    "/.venv",
    "dank_mids/_vendor/aiolimiter/.git",
    "dank_mids/_vendor/aiolimiter/.github",
    "dank_mids/_vendor/aiolimiter/docs",
    "dank_mids/_vendor/aiolimiter/tests",
    "dank_mids/**/*.pyd",
    "dank_mids/**/*.so",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "dank_mids",
    "hatch_build.py",
    "LICENSE",
    "README.md",
    "scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["dank_mids"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.mypy]
exclude = ["build/", "cache/", "env/", "tests/"]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["return"]
plugins = ["typed_envs.mypy_plugin", "a_sync_mypy_plugin"]
files = ["dank_mids"]
pretty = true
show_error_codes = true
show_error_context = true
warn_no_return = false

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | cache
  | docs
  | dist
  | env
)/
'''
